- fix bug in writing Utilities/R session: R data set was being
  written in wrong (CSV) format
- fix bug: datafile name was not being cleared on Close Session
- refinements to Makefiles: don't expand CFLAGS multiple times
- handle spaces in filenames when stacking the "open" command
- fix bug with editing gnuplot graphs
- try to get win32 LaTeX view working properly

04/21/2002 version 0.994
- fix bugs in win32 copy to clipboard
- fix RTF printing of correlation matrix
- fix bug in genr (generating a scalar when data set is sub-
  sampled)
- fix bug: editing periodogram graph using GUI
- partially update docs
- distinguish between $T (number of obs used in last model) and
  $nobs (number of obs in current sample range) in genr
  expressions
- fix bug in gnuplot PNG display for remote X sessions
- add configure option "--disable-png-graphics" to revert to
  old-style behaviour of gnuplot in case of problems
- remove upwanted dependency on libgcc_s in Red Hat binary rpm
- update versions of gtk and glib for win32
- fix build problems revealed by the Debian package build

04/15/2002 version 0.993
- add option to specify lag order in autocorrelation test;
  also add Box-Pierce and Ljung-Box stats to test output
- fix brokenness in Excel importer on win32
- fixes to setmiss command (console and script modes)
- enable pop-up menu for all gnuplot graphs under Linux/unix;
  also add facility to print graphs directly under gnome,
  and to zoom graphs on X11 display
- make DVI viewer configurable and make "latex view" functions
  work on win32
- add inclusive inequality operators '>=' and '<=' to genr
- fix bug in genr: operator priority was not being fully respected
  in all cases
- fix bug in Replace function for script edit window
- fix bug that crept in, in reading old-format data files
- fix bug: possible loss of precision when writing data file
- fix bug in statistical reportage with weighted least squares,
  when the weight is not a dummy, but has some zero values